--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,23 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    //Bmob
     implementation 'cn.bmob.android:bmob-im:2.1.1@aar'
     implementation 'cn.bmob.android:bmob-sdk:3.6.3'
+    //CircleImageView 圆形头像
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //Glide 图片加载
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //Litepal 数据库
+    implementation 'org.litepal.android:java:3.0.0'
+    //Eventbus 事件总栈
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    //Zxing 二维码
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    //WheelView 生日选择控件
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
+    //RxVolley 网络请求
+    implementation('com.kymjs.rxvolley:rxvolley:1.1.4') {
+        exclude group: 'io.reactivex'
+    }
 }
